--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body{
-    background-color: #f0f0f0;
+    background-image: url('image/download\ \(1\).jpeg');
+    background-size: cover; 
+    background-position: center; 
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
 nav{
     background-color: transparent;
-    color: black;
+    color: white;
     text-align: center;
     padding: 10px;
     display: flex;
@@ -22,13 +24,13 @@ nav ul {
 
 nav ul li a{
     text-decoration: none;
-    color: black;
+    color: white;
     margin-right: 1rem;
 }
 .line{
     width: 100%;
     height: 1px;
-    background-color: black;
+    background-color: white;
 }
 
 .image-card-container {
@@ -43,7 +45,7 @@ nav ul li a{
 }
 .image-card img {
     width: 84rem;
-    height: 50rem;
+    height: 25rem;
     object-fit: cover;
 }
 
