--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-image: url('image/download\ \(1\).jpeg');
+    /* background-image: url('image/download\ \(1\).jpeg'); */
+    background-color: #121212;
     background-size: cover; 
     background-position: center; 
     font-family: Arial, sans-serif;
